docs/api/qiskit/0.39/qiskit.algorithms.EigensolverResult.mdx
---
title: EigensolverResult (v0.39)
description: API reference for qiskit.algorithms.EigensolverResult in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.EigensolverResult
---

# EigensolverResult

<Class id="qiskit.algorithms.EigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/eigen_solvers/eigen_solver.py" signature="EigensolverResult" modifiers="class">
  Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

  Pending deprecation: Eigensolver Result.

  The EigensolverResult class has been superseded by the [`qiskit.algorithms.eigensolvers.EigensolverResult`](qiskit.algorithms.eigensolvers.EigensolverResult "qiskit.algorithms.eigensolvers.EigensolverResult") class. This class will be deprecated in a future release and subsequently removed after that.

  ## Methods

  <span id="qiskit-algorithms-eigensolverresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.EigensolverResult.combine" signature="EigensolverResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### aux\_operator\_eigenvalues

  <Attribute id="qiskit.algorithms.EigensolverResult.aux_operator_eigenvalues">
    Return aux operator expectation values.

    These values are in fact tuples formatted as (mean, standard deviation).

    **Return type**

    `Optional`\[`List`\[`Union`\[`List`\[`Optional`\[`Tuple`\[`complex`, `complex`]]], `Dict`\[`str`, `Tuple`\[`complex`, `complex`]]]]]
  </Attribute>

  ### eigenstates

  <Attribute id="qiskit.algorithms.EigensolverResult.eigenstates">
    return eigen states

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  ### eigenvalues

  <Attribute id="qiskit.algorithms.EigensolverResult.eigenvalues">
    returns eigen values

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>
</Class>

